--- a/StorePage.htm
+++ b/StorePage.htm
@@ -27,6 +27,7 @@
 
 
     </div>
+<hr/>
     <h1 class="border">Nerd-Haven</h1>
     <div id="image">
         <img id="img1" src="http://www.clipartkid.com/images/505/video-game-controller-clip-art-cliparts-co-Lbeyiy-clipart.png" alt="Controller"
@@ -61,7 +62,7 @@
                             align="right" />
                 </tr>
                 <tr>
-                    <td><p>The One Ring Replica <br/> $199.99</p><input type="button" class="button" value="Add To Cart"></td>
+                    <td><p>The One Ring (Authenic) <br/> $100,000,000.</p><input type="button" class="button" value="Add To Cart"></td>
                     <td> <img class="borderh1" id="img 6" src="http://www.tolkienshop.com/contents/media/l_one_ring_gold_italian.jpg" alt="ring"
                             align="right" />
                 </tr>
@@ -80,10 +81,12 @@
             <img id="img7" src="http://orig02.deviantart.net/59da/f/2014/158/5/a/walfas_commission___tp_master_sword_by_rumiflan-d6xr3kj.png" alt="master sword"/>
     </div>
 </div>
-<br/>
-<br/>
-<h1 id="Thanks" class= "borderh2"> Thanks for visiting our site!<br/> Come again soon! </h1>
+<div>
+<h1 id="Thanks" class= "borderh2"> Thanks for visiting our site!<br/> Come again soon! 
+<img class="borderPic" id="img8" src="https://media.giphy.com/media/Anoa2myQLH8yc/giphy.gif" alt="mr. mime"/> </h1>
+</div>
 <hr/>
+<footer>
 <div id="nav2">
         <ul>
             <li><img id="joystick" src="http://www.clker.com/cliparts/0/c/4/c/11970899991672979969brunurb_Retro_Joystick_002.svg.med.png"
@@ -99,7 +102,7 @@
 
     </div>
     
-
+</footer>
 </body>
 
 </html>
